# ticktick-mcp-enhanced

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_en.md  pyproject.toml
docs/: PRODUCT_DESIGN.md  PRODUCT_DESIGN_CN.md
src/ticktick_mcp/: __init__.py  auth.py  config.py
src/ticktick_mcp/cli/: __init__.py  console.py  context.py  main.py
src/ticktick_mcp/cli/commands/: auth.py  projects.py  tasks.py
src/ticktick_mcp/tools/: __init__.py  task_tools.py
src/ticktick_mcp/utils/: __init__.py  formatters.py  timezone.py
test/: test_api_functions.py  test_batch_operations.py
tests/: __init__.py  test_auth_config.py  test_cli_auth_commands.py  test_cli_auth_login.py  test_cli_console.py  test_cli_context.py  test_cli_help_examples.py  test_cli_main.py  test_cli_projects.py  test_cli_tasks.py  test_config.py
tests/integration/: __init__.py  test_cli_integration.py  test_cli_mock_integration.py
ticktick_mcp/: __main__.py
ticktick_mcp/src/: auth.py  client_manager.py  config.py  log.py  server.py  ticktick_client.py
ticktick_mcp/src/tools/: project_tools.py  query_tools.py  task_tools.py
ticktick_mcp/src/utils/: logging_utils.py  validators.py
