[project]
name = "ticktick-mcp"
version = "0.2.0"
description = "Model Context Protocol (MCP) server for TickTick task management"
authors = [
    { name = "Jaesung Park", email = "parkjs814@gmail.com" },
    { name = "Gemini Agent", email = "agent@gemini.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.2.0,<2.0.0",
    "requests>=2.30.0,<3.0.0",
    "typer>=0.12.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.scripts]
ticktick-mcp = "ticktick_mcp:main"
ticktick = "ticktick_mcp.cli.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ticktick_mcp*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires API credentials)",
]
addopts = "-v"
